# dental_segmentation

./: .gitignore  README.md  pyproject.toml  train.py
src/config/: defaults.py
src/data/: datamodule.py
src/data/components/: dental_dataset.py  transforms.py
src/models/: module.py
src/models/components/: dinov2.py
src/utils/: metrics.py  visualization.py
